[project]
name = "github_projects_mcp_server"
version = "0.4.0"
description = "MCP Server for interacting with GitHub Projects V2"
requires-python = "==3.12.8"
readme = "README.md"
license = { file = "LICENSE" }

authors = [{ name = "Jaime Alvarez", email = "jaimealvarezuru@gmail.com" }]
dependencies = ["fastmcp>=2.2.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/JaimeAlvarez18/github_projects_mcp_server"
Repository = "https://github.com/JaimeAlvarez18/github_projects_mcp_server.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/github_projects_mcp"]

[project.scripts]
github_projects_mcp_server = "github_projects_mcp.server:main"

